# TPCuatrimestral

./: .gitignore  CMakeLists.txt  Especificación TP Cuatrimestral.docx  README.md  main.c
Exercise1/: Appliance.c  Appliance.h  Cart.c  Cart.h  Catalogue.c  Catalogue.h  ExecuteExercise1.c  ExecuteExercise1.h  Invoice.c  Invoice.h  InvoiceLine.c  InvoiceLine.h  Label.c  LineCart.c  LineCart.h  Manufacturer.c  Manufacturer.h  Provider.c  Provider.h  Stock.c  UMLExercise1.mdj  info.doc
Exercise2/: Accesory.c  Accesory.h  Camera.c  Camera.h  CameraAndAccesoryTable.c  CameraAndAccesoryTable.h  ExecuteExercise2.c  ExecuteExercise2.h  Exercise2UML.mdj  Manufacturer.c  Manufacturer.h  Product.c  Product.h  Provider.c  Provider.h  RegisteredUser.c  RegisteredUser.h  RegistredUser.c  RegistredUser.h  Sale.c  Sale.h  SaleLine.c  SaleLine.h
Exercise3/: Borrow.c  Borrow.h  ExecuteExercise3.c  ExecuteExercise3.h  Exercise3UML.mdj  Library.c  Library.h  Material.c  Material.h  Person.c  Person.h
Exercise4/: Client.c  Client.h  ExecuteExercise4.c  ExecuteExercise4.h  Exercise4UML.mdj  Hotel.c  Hotel.h  Invoice.c  Invoice.h  Receptionist.c  Receptionist.h  Reservation.c  Reservation.h  Room.c  Room.h  info4.doc
Exercise5/: Admin.c  Admin.h  Client.c  Client.h  DataBase.c  DataBase.h  Excess.c  Excess.h  ExecuteExercise5.c  ExecuteExercise5.h  Exercise5UML.mdj  Id.c  Movie.c  Movie.h
src/Exercise1/: Appliance.c  Appliance.h  Cart.h  Catalogue.h  ExecuteExercise1.c  Invoice.c  InvoiceLine.c  InvoiceLine.h  Label.h  Manufacturer.c  Manufacturer.h  Stock.h
src/Exercise2/: Camera.h  CameraAndAccesoryTable.c  ExecuteExercise2.c  Manufacturer.c  Product.h  RegisteredUser.c  RegisteredUser.h  Sale.c  Sale.h  SaleLine.c  SaleLine.h  info2.doc
src/Exercise3/: Borrow.c  Borrow.h  ExecuteExercise3.c  ExecuteExercise3.h  Library.c  Library.h  Material.c  info3.doc
src/Exercise4/: Client.c  ExecuteExercise4.h  Hotel.c  Hotel.h  Receptionist.h
src/Exercise5/: Admin.c  Client.c  DataBase.c  DataBase.h  Excess.c  Excess.h  Id.c  Id.h  info5.docx
